# zust

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  test_runner.py
.github/workflows/: test.yml
examples/: comparisons.zz  conditionals.tbd  functions.zz  loops.zz  operations.zz  type_conversion.zz  variables.zz
examples/store/: funcall.tbd  functions.tbd  integer.tbd  locals.tbd  math.tbd
examples/zz/: conditionals.zz  operations.zz
include/: all.hpp
include/ast/: ASTNode.hpp
include/codegen/: Canaries.hpp  CodeGen.hpp  Codegen.hpp  RegisterAllocator.hpp
include/common/: Colors.hpp  Errors.hpp  Logging.hpp  StringUtils.hpp
include/lexer/: Lexer.hpp
include/parser/: NameMapper.hpp  Parser.hpp  ScopeContext.hpp
include/support/: CommandLine.hpp  File.hpp
include/typechecker/: TypeChecker.hpp
src/ast/: ASTNode.cpp
src/codegen/: CodeGen.cpp  CodeGenLLVM.cpp  CodeGenLinux.cpp  CodeGenWindows.cpp  CodegenLLVM.cpp  CodegenLinux.cpp  CodegenWindows.cpp  RegisterAllocator.cpp
src/common/: Logging.cpp  StringUtils.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp  ScopeContext.cpp
src/support/: CommandLine.cpp  File.cpp
src/typechecker/: TypeChecker.cpp
tests/zz/: typechecker_fails.zz  types.zz  variables.zz
tests/zz/conditionals/: if-elif-else.zz  if-elif.zz  if-else.zz  if.zz
tests/zz/functions/: basics.zz  recursive.zz  scopes.zz
tests/zz/operations/: binary.zz  unary.zz
